--- a/views/index.html
+++ b/views/index.html
@@ -14,8 +14,20 @@
         </ul>
     </header>
 
-    <main>
+    <main style=" text-align:center;">
         <h1>Wellcome to Server Page</h1>
+        
+        <form action="/api-user" method="post" style="background: #c6c6c6; width: 650px; margin: auto; padding: 40px; border-radius: 10px;">
+            <div style="margin-bottom: 10px; display: flex; align-items: center;">
+                <label for="name">Name</label>
+                <input style="width: 100%; padding: 10px; margin-left: 10px;" type="text" name="name" id="name">
+            </div>
+            <div style="margin-bottom: 10px; display: flex; align-items: center;">
+                <label for="phone">Phone</label>
+                <input style="width: 100%; padding: 10px; margin-left: 10px;" type="number" name="phone" id="phone">
+            </div>
+            <button type="submit" style="padding: 10px 30px; margin-top: 10px; border-radius: 5px; background-color: black; color: #fff; cursor: pointer;">Submit</button>
+        </form>
     </main>
     
 </body>
